--- a/newest.css
+++ b/newest.css
@@ -87,7 +87,7 @@ footer {
   text-align: center;
   padding: 1px;
   bottom: 0;
-  position: fixed;
+  position: relative;
   left: 0;
   width: 100%;
   min-height: 10px; /* Adjust the minimum height as needed */
